// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntriresFilter should render for host filter 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={false}
  inline={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
    >
      <FormGroup
        bsClass="form-group"
      >
        <InputGroup
          bsClass="input-group"
        >
          <DropdownButton
            componentClass={[Function]}
            id="entry-filter"
            title="Host"
          >
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="title"
              onClick={[Function]}
            >
              Title
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="severity"
              onClick={[Function]}
            >
              Severity
            </MenuItem>
            <MenuItem
              active={true}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="hostname"
              onClick={[Function]}
            >
              Host
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="fix"
              onClick={[Function]}
            >
              Fix Type
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="inhibitor"
              onClick={[Function]}
            >
              Inhibitor
            </MenuItem>
          </DropdownButton>
          <FormControl
            bsClass="form-control"
            className="entries-filter-reset-height"
            componentClass="input"
            onChange={[Function]}
            type="text"
          />
        </InputGroup>
      </FormGroup>
    </Col>
  </Row>
</Form>
`;

exports[`EntriresFilter should render for severity filter 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={false}
  inline={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
    >
      <FormGroup
        bsClass="form-group"
      >
        <InputGroup
          bsClass="input-group"
        >
          <DropdownButton
            componentClass={[Function]}
            id="entry-filter"
            title="Severity"
          >
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="title"
              onClick={[Function]}
            >
              Title
            </MenuItem>
            <MenuItem
              active={true}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="severity"
              onClick={[Function]}
            >
              Severity
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="hostname"
              onClick={[Function]}
            >
              Host
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="fix"
              onClick={[Function]}
            >
              Fix Type
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="inhibitor"
              onClick={[Function]}
            >
              Inhibitor
            </MenuItem>
          </DropdownButton>
          <DropdownButton
            id="entry-value-filter"
            title="Low"
          >
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key=""
              onClick={[Function]}
            >
              All
            </MenuItem>
            <MenuItem
              active={true}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="low"
              onClick={[Function]}
            >
              Low
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="medium"
              onClick={[Function]}
            >
              Medium
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="high"
              onClick={[Function]}
            >
              High
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="info"
              onClick={[Function]}
            >
              Info
            </MenuItem>
          </DropdownButton>
        </InputGroup>
      </FormGroup>
    </Col>
  </Row>
</Form>
`;

exports[`EntriresFilter should render for title filter 1`] = `
<Form
  bsClass="form"
  componentClass="form"
  horizontal={false}
  inline={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
    >
      <FormGroup
        bsClass="form-group"
      >
        <InputGroup
          bsClass="input-group"
        >
          <DropdownButton
            componentClass={[Function]}
            id="entry-filter"
            title="Title"
          >
            <MenuItem
              active={true}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="title"
              onClick={[Function]}
            >
              Title
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="severity"
              onClick={[Function]}
            >
              Severity
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="hostname"
              onClick={[Function]}
            >
              Host
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="fix"
              onClick={[Function]}
            >
              Fix Type
            </MenuItem>
            <MenuItem
              active={false}
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              key="inhibitor"
              onClick={[Function]}
            >
              Inhibitor
            </MenuItem>
          </DropdownButton>
          <FormControl
            bsClass="form-control"
            className="entries-filter-reset-height"
            componentClass="input"
            onChange={[Function]}
            type="text"
          />
        </InputGroup>
      </FormGroup>
    </Col>
  </Row>
</Form>
`;
